fixed content jumping, h1 on about page, styled about page

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -7,12 +7,17 @@
     margin: 0 auto 45px auto;
     position: relative;
     background-color: #000;
-    padding: 10px;
+    padding: 10px 10px 0 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    border-radius: 18px;
+}
+
+.about h1 {
+    font-size: 1.3125rem;
 }
 
 .comic figure {
@@ -30,6 +35,15 @@
     left: 0;
 }
 
+.comic .panel-1 {
+    border-top-left-radius: 18px;
+}
+
+.based-on {
+    border-bottom-left-radius: 18px;
+    border-bottom-right-radius: 18px;
+}
+
 .comic .panel-2 {
     padding-top: calc(2160 / 3840 * 75%);
 }
@@ -41,7 +55,7 @@
 .comic .panel-2, .comic .panel-5, .comic .panel-3a, .comic .panel-7 {
     width: 40%;
     position: absolute;
-    right: 20px;
+    right: 10px;
     top: 4%;
 }
 
@@ -52,7 +66,7 @@
 
 .comic .panel-3a {
     top: 25.3%;
-    left: 20px;
+    left: 10px;
 }
 
 .comic .panel-3a img {
@@ -64,14 +78,11 @@
     align-self: flex-end;
 }
 
-.comic .panel-5 {
-    top: 55%;
-    right: 20px;
-}
+
 
 .comic .panel-7 {
     width: 40%;
-    left: 20px;
+    left: 10px;
     top: 78%;
 }
 
@@ -111,7 +122,7 @@
    }
 
     .comic p {
-        font-size: 1.125rem;
+        font-size: 1.25rem;
         margin-bottom: 20px;
         top: 0;
         padding: 20px;
@@ -123,6 +134,7 @@
 
     .comic .panel-3a {
         top: 25.7%;
+        left: 20px;
    }
 
     .comic .panel-5 {
@@ -131,10 +143,16 @@
 
     .comic .panel-7 {
         top: 80%;
+        left: 20px;
    }
 
     .comic {
         padding: 20px;
+        padding-bottom: 10px;
+   }
+
+   .comic .panel-2, .comic .panel-5 {
+    right: 20px;
    }
 
     .panel-2 img, .panel-5 img {
