--- a/src/pages/Newsfeed/Newsfeed.css
+++ b/src/pages/Newsfeed/Newsfeed.css
@@ -14,6 +14,7 @@
     /* background: #000; */
     /* padding: 20px; */
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: 20px solid #000;
 }
 
 
